ingress-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-healthz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-healthz
  template:
    metadata:
      labels:
        app: flask-healthz
    spec:
      containers:
        - name: flask-healthz
          image: flask-healthz:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
