ingress-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-healthz-service
spec:
  selector:
    app: flask-healthz
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
